# eBookManager

./: .gitignore  README.md
include/: Book.hpp  Manage.hpp
src/: Book.cpp  CMakeLists.txt  Download.cpp  Manage.cpp  main.cpp
